# libmelda

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benchmark/automerge/: README.md  apply-changesets-binary-notext.js  apply-changesets-binary.js  compare_verify.js  create-changesets-binary-notext.js  create-changesets-binary.js  package.json
benchmark/melda/: Cargo.toml  README.md  editing-trace.txt
benchmark/melda/src/: main.rs
examples/: simple.rs
kibi/: PATCH_AGAINST_KIBI_0.2.2_COMMIT_610b5edf.patch  README.md
src/: adapter.rs  brotliadapter.rs  constants.rs  datastorage.rs  filesystemadapter.rs  flate2adapter.rs  flate2filesystemadapter.rs  lib.rs  melda.rs  memoryadapter.rs  revision.rs  revisiontree.rs  solidadapter.rs  sqliteadapter.rs  utils.rs
