[package]
name = "melda"
version = "0.1.7"
authors = ["Amos Brocco <amos.brocco@supsi.ch>"]
edition = "2018"
license = "GPL-3.0"
description = "Melda is a Delta-State JSON CRDT"
homepage = "https://github.com/slashdotted/libmelda"
repository = "https://github.com/slashdotted/libmelda"

[dependencies]
yavomrs = "0.1.0"
rust-crypto = "0.2.36"
regex = "1.5.4"
serde_json = "1.0"
serde = "1.0.126"
anyhow = "1.0.41"
url = "2.2.2"
lazy_static = "1.4.0"
serial_test = "0.4.0"

# Solid Adapter dependencies
rayon = "1.5.1"
log = "0.4.14"
flate2 = "1.0"
reqwest = { version = "0.11.4", features = ["blocking", "cookies"], optional = true }
rio_api = { version = "0.6.2", optional = true }
rio_turtle = { version = "0.6.2", optional = true }
oxiri = { version = ">=0.1,<0.3", optional = true }
cacache = { version = "8.0.0", optional = true }
lru = { version = "0.6.6", optional = true }

# SQLite Adapter dependencies
rusqlite = { version = "0.27.0", optional = true }

[features]
default = [ "solid", "sqlitedb" ]
solid =  [ "reqwest", "rio_api", "rio_turtle", "oxiri", "cacache", "lru"]
sqlitedb = [ "rusqlite"]

