[package]
name = "melda-bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "0.11.0"
procinfo = "0.4.2"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
fs_extra = "1.2.0"

[dependencies.melda]
path = "../.."
